--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8" />
     <title>My First Webpage</title>
   </head>
   <body>
@@ -33,6 +33,7 @@
       <li>The house that jack build</li>
       <li>Dead Silance</li>
       <li>IT</li>
+      <p>mistakes were made</p>
     </ol>
   </body>
 </html>
