--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <title>My First Webpage</title>
   </head>
   <body>
-    <h1>Food99999`</h1>
+      <h1>Homepage</h1>
+      <a href="https://www.theodinproject.com/about">click me</a>
+      <a href="about.html">about</a>
+    <h1>Food</h1>
     <ul>
       <li>Pizza</li>
       <li>Pasta</li>
@@ -33,7 +36,6 @@
       <li>The house that jack build</li>
       <li>Dead Silance</li>
       <li>IT</li>
-      <p>mistakes were made</p>
     </ol>
   </body>
 </html>
